clean up otherSocials array, fix gap and padding

--- a/src/components/home/Home.module.scss
+++ b/src/components/home/Home.module.scss
@@ -12,7 +12,8 @@ h2 {
 }
 
 h3 {
-  padding-bottom: 0.75rem;
+  padding-bottom: 0.5rem;
+  font-size: 0.75rem;
 }
 
 .hand {
